<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonExercise">

    <LinearLayout
        android:id="@+id/linLayoutButtonExercise"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnDisappear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Disappear" />

        <Button
            android:id="@+id/btnChangeButtonBG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ChangeButtonBG" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Close" />

        <Button
            android:id="@+id/btnChangeBG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChangeBG" />

        <Button
            android:id="@+id/btnToast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/Toast" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>